--- a/ext/css/font.css
+++ b/ext/css/font.css
@@ -23,3 +23,15 @@
 	font-weight:	normal;
 	font-style:		normal;
 }
+
+/* http://www.fontsquirrel.com/fonts/Jinky */
+@font-face {
+	font-family:	'jinkyregular';
+	src:			url('../font/JINKY.eot');
+	src:			url('../font/JINKY.eot?#iefix') format('embedded-opentype'),
+					url('../font/JINKY.woff') format('woff'),
+					url('../font/JINKY.ttf') format('truetype'),
+					url('../font/JINKY.svg#jinkyregular') format('svg');
+	font-weight:	normal;
+	font-style:		normal;
+}
