--- a/ext/css/main.css
+++ b/ext/css/main.css
@@ -549,6 +549,10 @@ div.item-shipping-info {
 	color:		#555;
 }
 
+div.item-shipping-info img {
+	float:	right;
+}
+
 div.shop-filter {
 	float:		left;
 	width:		190px;
