--- a/ext/css/fonts.css
+++ b/ext/css/fonts.css
@@ -1,20 +1,28 @@
 @font-face {
-	font-family:	'Britannic Bold';
-	src:			local('Britannic Bold'),
-					url('../../font/Britanic.ttf') format('truetype'),
-					url('../../font/Britanic.eot') format('opentype');
+	font-family:	'britanic';
+	src:			url('../../font/britanic-bold.eot');
+	src:			url('../../font/britanic-bold.eot?#iefix') format('embedded-opentype'),
+					url('../../font/britanic-bold.woff') format('woff'),
+					url('../../font/britanic-bold.ttf') format('truetype'),
+					url('../../font/britanic-bold.svg#voltaireregular') format('svg');
+	font-weight:	bold;
+	font-style:		normal;
 }
 
 @font-face {
-	font-family:	'Poly';
-	src:			local('Poly'),
-					url('../../font/Poly.ttf') format('truetype'),
-					url('../../font/Poly.eot') format('opentype');
+	font-family:	'poly';
+	src:			url('../../font/poly-regular.eot');
+	src:			url('../../font/poly-regular.eot?#iefix') format('embedded-opentype'),
+					url('../../font/poly-regular.woff') format('woff'),
+					url('../../font/poly-regular.ttf') format('truetype'),
+					url('../../font/poly-regular.svg#voltaireregular') format('svg');
+	font-weight:	normal;
+	font-style:		normal;
 }
 
 /* http://www.fontsquirrel.com/fonts/voltaire */
 @font-face {
-	font-family:	'voltaireregular';
+	font-family:	'voltaire';
 	src:			url('../../font/voltaire-regular.eot');
 	src:			url('../../font/voltaire-regular.eot?#iefix') format('embedded-opentype'),
 					url('../../font/voltaire-regular.woff') format('woff'),
@@ -26,12 +34,12 @@
 
 /* http://www.fontsquirrel.com/fonts/Jinky */
 @font-face {
-	font-family:	'jinkyregular';
-	src:			url('../../font/JINKY.eot');
-	src:			url('../../font/JINKY.eot?#iefix') format('embedded-opentype'),
-					url('../../font/JINKY.woff') format('woff'),
-					url('../../font/JINKY.ttf') format('truetype'),
-					url('../../font/JINKY.svg#jinkyregular') format('svg');
+	font-family:	'jinky';
+	src:			url('../../font/jinky-regular.eot');
+	src:			url('../../font/jinky-regular.eot?#iefix') format('embedded-opentype'),
+					url('../../font/jinky-regular.woff') format('woff'),
+					url('../../font/jinky-regular.ttf') format('truetype'),
+					url('../../font/jinky-regular.svg#jinkyregular') format('svg');
 	font-weight:	normal;
 	font-style:		normal;
 }
